Minor changes. (See changelog of aboly.)

--- a/aboly.html
+++ b/aboly.html
@@ -1381,7 +1381,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">问孝</span>：问（孔子）孝是什么意思，怎样才算孝。后文还会有<a href="#2.13">问君子</a>、<a href="#3.4">问礼之本</a>、<a href="#6.22">问知</a>、<a href="#12.1">问仁</a>、<a href="#12.7">问政</a>等相同句式。与现代汉语不同，古代的<span class="lyterm">问</span>用于询问时，直接宾语是事，而非作为信息来源的人。要表达&ldquo;向某人询问某事&rdquo;（ask sb about sth），需加介词&ldquo;于&rdquo;，即&ldquo;问 sth 于 sb&rdquo;（<span class="lyq">孟孙问孝于我</span>）。如果是&ldquo;问 sb&rdquo;，要么表示问他是什么样的人，仍然在问事，要么表示慰问，探望。<span class="lyexample"><span>【例】</span><span><a href="#1.10" class="lyref">1.10</a> <span class="lyq">子禽问于子贡曰：&ldquo;&hellip;&hellip;&rdquo;</span><a href="#14.9" class="lyref">14.9</a> <span class="lyq">或问子产，子曰：&ldquo;惠人也。&rdquo;</span><a href="#6.10" class="lyref">6.10</a> <span class="lyq">伯牛有疾，子问之。</span>成语&ldquo;问道于盲&rdquo;、&ldquo;访贫问苦&rdquo;。</span></span>
+<span class="lyterm">问孝</span>：问（孔子）孝是什么意思，怎样才算孝。后文还会有<a href="#2.13">问君子</a>、<a href="#3.4">问礼之本</a>、<a href="#6.22">问知</a>、<a href="#12.1">问仁</a>、<a href="#12.7">问政</a>等相同句式。与现代汉语不同，古代的<span class="lyterm">问</span>用于询问时，直接宾语是事，而非作为信息来源的人。要表达&ldquo;向某人询问某事&rdquo;（ask sb about sth），需加介词&ldquo;于&rdquo;，即&ldquo;问 sth 于 sb&rdquo;（<span class="lyq">孟孙问孝于我</span>）。如果是&ldquo;问 sb&rdquo;，要么表示问他是什么样的人，仍然在问事，要么表示慰问，探望。<span class="lyexample"><span>【例】</span><span><a href="#1.10" class="lyref">1.10</a> <span class="lyq">子禽问于子贡曰：&ldquo;&hellip;&hellip;&rdquo;</span><a href="#14.9" class="lyref">14.9</a> <span class="lyq">或问子产，子曰：&ldquo;惠人也。&rdquo;</span><a href="#6.10" class="lyref">6.10</a> <span class="lyq">伯牛有疾，子问之。</span>成语有&ldquo;问道于盲&rdquo;、&ldquo;访贫问苦&rdquo;。</span></span>
 </p>
 </li>
 <li>
@@ -1412,7 +1412,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">父母唯其疾之忧</span>：（使）父母（不为子女担心别的，）只担心他们（会不会）生病。意思是，为父母减忧是孝的表现。即使在医学昌明的今天，疾病仍然很难预防，如果其它的都不用担心，说明子女的才能品德各方面足以使父母欣慰了。</p>
+<span class="lyterm">父母唯其疾之忧</span>：（使）父母（不为子女担心别的，）只担心他们（会不会）生病。意思是，为父母减忧是孝的表现。即使在医学昌明的今天，疾病仍然很难预防，如果其它的都不用担心，说明子女的才能品德各方面足以让父母欣慰了。</p>
 <p>
 <a id="ozhiv"></a><span class="lyterm">其疾之忧</span>：&ldquo;忧其疾&rdquo;的倒装。助词<span class="lyterm">之</span>把宾语O提到动词或介词V之前加以强调，形成&ldquo;O之V&rdquo;的倒装结构，&ldquo;之&rdquo;自身无意义。<span class="lyexample"><span>【例】</span><span><a href="#4.10" class="lyref">4.10</a> <span class="lyq">义之与比。</span><a href="#5.6" class="lyref">5.6</a> <span class="lyq">吾斯之未能信。</span><a href="#9.14" class="lyref">9.14</a> <span class="lyq">君子居之，何陋之有？</span><a href="#11.10" class="lyref">11.10</a> <span class="lyq">非夫人之为（<span class="lypinyin">w&egrave;i</span>）恸而谁为？</span><a href="#11.24" class="lyref">11.24</a> <span class="lyq">吾以子为异之问，曾由与求之问。</span></span></span>还可以比较 <a href="#1.2" class="lyref">1.2</a>  &ldquo;<a href="#nzhiv">N之V</a>&rdquo;的倒装结构，在那里&ldquo;之&rdquo;是宾语。</p>
 </li>
@@ -2302,7 +2302,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">灌</span>：通&ldquo;祼&rdquo;（<span class="lypinyin">gu&agrave;n</span>）。禘祭中为了求神降临，共有9次向尸（代替死者受祭的活人）献上香酒并浇酒于地，其中第一次称为祼。</p>
+<span class="lyterm">灌</span>：通&ldquo;祼&rdquo;（<span class="lypinyin">gu&agrave;n</span>）。禘祭中为了求神降临，共有9次向尸（代替死者受祭的活人）进献香酒并浇酒于地，其中第一次称为祼。</p>
 </li>
 </ul>
 </div>
@@ -2329,7 +2329,8 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">其如示诸斯乎！</span>：恐怕就像摆在这（手掌）上那样（简单明显）吧！意思是知禘之说者治天下当易如反掌，也隐含着对当时政教不修的不满。</p>
+<span class="lyterm">其如示诸斯乎！</span>：恐怕就像摆在这（手掌）上那样（简单明显）吧！意思是知禘之说者治天下当易如反掌，也含有对当时政教不修的不满。<span class="lyseealso"><span>【参】</span><span>《孟子&middot;公孙丑上》：<span class="lyq">以不<a href="#ren3">忍</a>人之心，行不忍人之政，治天下可运之掌上。</span></span></span>
+</p>
 </li>
 </ul>
 </div>
@@ -5301,7 +5302,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm"><a href="#yuan4a">怨</a></span>：指因失望后悔而惆怅不满。</p>
+<span class="lyterm"><a href="#yuan4a">怨</a></span>：指因失望或失意而后悔、不满。</p>
 </li>
 </ul>
 </div>
@@ -6154,7 +6155,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">知</span>：理解，懂得。这里的着眼点是&ldquo;<a href="#junzi">君子</a>&rdquo;文化修养较高，&ldquo;小民&rdquo;文化水平较低。现代政治难以普遍采用全民表决，文化程度也是重要原因。<span class="lyseealso"><span>【参】</span><span><a href="#6.21" class="lyref">6.21</a> <span class="lyq">中人以下，不可以语上也。</span><a href="#17.4" class="lyref">17.4</a> <span class="lyq">君子学道则爱人，小人学道则易使也。</span>《周易&middot;系辞上传》：<span class="lyq">一阴一阳之谓道，继之者善也，成之者性也。仁者见之谓之仁，知者见之谓之知，百姓日用而不知，故君子之道鲜矣。</span>《孟子&middot;尽心上》：<span class="lyq">孟子曰：&ldquo;行之而不著焉，习矣而不察焉，终身由之而不知其道者，众也。&rdquo;</span></span></span>
+<span class="lyterm">知</span>：理解，懂得。这里的着眼点是&ldquo;<a href="#junzi">君子</a>&rdquo;文化修养较高，&ldquo;小民&rdquo;文化水平较低。现代政治难以普遍采用全民表决，文化程度也是重要原因。<span class="lyseealso"><span>【参】</span><span><a href="#6.21" class="lyref">6.21</a> <span class="lyq">中人以下，不可以语上也。</span><a href="#17.4" class="lyref">17.4</a> <span class="lyq">君子学道则爱人，小人学道则易使也。</span>《周易&middot;系辞上传》：<span class="lyq">一阴一阳之谓道，继之者善也，成之者性也。仁者见之谓之仁，知者见之谓之知，百姓日用而不知，故君子之道鲜矣。</span>《孟子&middot;尽心上》：<span class="lyq">孟子曰：&ldquo;行之而不著焉，习矣而不察焉，终身由之而不知其道者，众也。&rdquo;</span>《史记&middot;滑稽列传》载，<a href="#ximenbao">西门豹</a>发动民众修渠灌田，<span class="lyq">民治渠少烦苦，不欲也</span>，他也表达了相似的观点：<span class="lyq">民可以乐成，不可与虑始。今父老子弟虽患苦我，然百岁后期令父老子孙思我言。</span></span></span>
 </p>
 <p>较偏激的解释，比之于《老子》第65章的愚民思想：<span class="lyq">古之善为道者，非以明民，将以愚之。民之难治，以其多智。故以智治国，国之贼；不以智治国，国之福。</span>但孔子笃信教化，<a href="#15.39">有教无类</a>，既承认差别，又力行育人，是积极进取的实干家。</p>
 </li>
@@ -12886,6 +12887,7 @@ img.characterimg {
 <li>
 <p>
 <span class="lyterm"><a href="#bifu">鄙夫</a></span>：庸俗浅陋的人。&ldquo;鄙&rdquo;的具体所指见后两句。</p>
+<p>这个反问句的字面意思是&ldquo;鄙夫不可与之事君&rdquo;，实际是在说&ldquo;鄙夫不可事君&rdquo;，&ldquo;鄙夫不可为政&rdquo;。</p>
 </li>
 <li>
 <p>
@@ -12898,7 +12900,7 @@ img.characterimg {
 </ul>
 <div class="lyseealso">
 <p>
-<span>【参】</span><span>苏轼对于本章的学习体会，见《上皇帝书》：<span class="lyq">臣始读此书，疑其太过，以为鄙夫之患失，不过备位而苟容。及观李斯忧蒙恬之夺其权，则立二世以亡秦；卢杞忧怀光之数其恶，则误德宗以再乱。其心本生于患失，而其祸乃至于丧邦。孔子之言，良不为过！是以知为国者，平居必有忘躯犯颜之士，则临难<a href="#shu4a">庶几</a>有徇义<a href="#shou3">守死</a>之臣。苟平居尚不能一言，则临难何以责其死节？人臣苟皆如此，天下亦<a href="#dai4">殆</a>哉！</span></span>
+<span>【参】</span><span>苏轼对于本章的学习体会，见《上皇帝书》：<span class="lyq">臣始读此书，疑其太过，以为鄙夫之患失，不过<a href="#beiyuan">备位</a>而<a href="#gou3">苟</a>容。及观李斯忧蒙恬之夺其权，则立二世以亡秦；卢杞忧怀光之数其恶，则误德宗以再乱。其心本生于患失，而其祸乃至于丧邦。孔子之言，良不为过！是以知为国者，平居必有忘躯犯颜之士，则临难<a href="#shu4a">庶几</a>有徇义<a href="#shou3">守死</a>之臣。苟平居尚不能一言，则临难何以责其死节？人臣苟皆如此，天下亦<a href="#dai4">殆</a>哉！</span></span>
 </p>
 <p>（<a id="ershiwangqin"></a>李斯事：《史记&middot;李斯列传》载，前210年秦始皇病故，近臣赵高以<span class="lyq">未尝见秦免罢丞相功臣有封及二世者也，卒皆以诛亡</span>为由胁迫丞相<a href="#dongmenhuangquan">李斯</a>改立新君。李斯始而不从，继而<span class="lyq">仰天长叹，垂泪<a href="#taixi">太息</a></span>，合谋<a href="#jiancuanweijiao">矫</a>诏赐死了刚毅武勇的皇长子扶苏和名将蒙恬，立才能浅薄的幼子胡亥为秦二世，3年后秦朝覆亡。卢杞事：《新唐书&middot;卢杞传》载，783年10月爆发泾原兵变，唐德宗从都城长安出奔，被困于奉天（今陕西省咸阳市乾县）月余，朔方节度使李怀光千里赴难，勇解城下之围。怀光曾斥宰相卢杞之徒奸佞误国，<span class="lyq">宜诛之以谢天下</span>，杞惧，使德宗令怀光乘胜扫平叛党，不必入城面君。怀光<span class="lyq">内怏怏无所发，遂谋反，因暴言杞等罪恶</span>，德宗再逃至汉中，战乱又延续了大半年才得平息。徇：通&ldquo;殉&rdquo;。）</p>
 </div>
@@ -13346,7 +13348,15 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">滔滔者天下皆是也，而谁以易之？</span>：天下到处都是一样（的礼崩乐坏），就像这水流无穷无尽势不可挡啊，却能与谁来改变它呢？<a id="taotao"></a><span class="lyterm">滔滔</span>：大水奔流不息的样子。<span class="lyexample"><span>【例】</span><span>毛泽东《菩萨蛮&middot;黄鹤楼》（1927年）：<span class="lyq">把酒酹滔滔，心潮逐浪高！</span>（酹（<span class="lypinyin">l&egrave;i</span>）：以酒浇地作为祭奠。）</span></span><span class="lyterm">以</span>：通&ldquo;与&rdquo;，和，同。<a id="yi4e"></a><span class="lyterm">易</span>：改变，这里有拯救、挽回的意味。</p>
+<span class="lyterm">滔滔者天下皆是也，而谁以易之？</span>：天下到处都是一样（的礼崩乐坏），就像这水流无穷无尽势不可挡啊，却能与谁来改变它呢？</p>
+<p>
+<a id="taotao"></a><span class="lyterm">滔滔</span>：大水奔流不息的样子。<span class="lyexample"><span>【例】</span><span>毛泽东《菩萨蛮&middot;黄鹤楼》（1927年）：<span class="lyq">把酒酹滔滔，心潮逐浪高！</span>（酹（<span class="lypinyin">l&egrave;i</span>）：以酒浇地作为祭奠。）</span></span>
+</p>
+<p>
+<span class="lyterm">以</span>：通&ldquo;与&rdquo;，和，同。<span class="lyexample"><span>【例】</span><span>《史记&middot;留侯列传》：<span class="lyq">陛下起布衣，以此属取天下。</span>（此属：这些人。）</span></span>
+</p>
+<p>
+<a id="yi4e"></a><span class="lyterm">易</span>：改变，这里有拯救、挽回的意味。</p>
 </li>
 <li>
 <p>
@@ -14403,7 +14413,7 @@ img.characterimg {
 <a id="zigong"></a><span class="lycharname">子贡</span>，<span class="lycharname">赐</span>：端木赐，字子贡，少孔子31岁，卫国人，<a href="#11.3">孔门十哲</a>之一。《仲尼弟子列传》说，<span class="lyq">子贡利口巧辞，孔子常黜其辩。</span>（黜：贬抑。）他有杰出的外交才干，<span class="lyq">子贡一出，存鲁、乱齐、破吴、强晋而霸越。子贡一使，使势相破，十年之中，五国各有变。</span>他有卓越的经商本领，善于观察行情低买高卖，家累千金，是同门中的首富。他是孔子最亲密的弟子之一，老师病重时他赶来探望，孔子问：&ldquo;<span class="lyq">赐，汝来何其晚也？</span>&rdquo;孔子去世后，他是丧礼的主持人，众弟子服丧3年，唯有他筑庐冢边，守丧6年。<a href="#19.21" class="lyref">19.21</a>  至 <a href="#19.25" class="lyref">19.25</a>  反映了子贡对老师的拳拳仰慕之心。</p>
 <p>司马迁特别偏爱子贡，《仲尼弟子列传》用了近1/3篇幅描写他游说齐、吴、越、晋之间，使鲁国免遭战乱的功绩。《货殖列传》评价：<span class="lyq">夫使孔子名布扬于天下者，子贡先后之也。此所谓得势而益彰者乎？</span><a href="#1.10" class="lyref">1.10</a> <a href="#1.15" class="lyref">1.15</a> <a href="#2.13" class="lyref">2.13</a> <a href="#3.17" class="lyref">3.17</a> <a href="#5.4" class="lyref">5.4</a> <a href="#5.9" class="lyref">5.9</a> <a href="#5.12" class="lyref">5.12</a> <a href="#5.13" class="lyref">5.13</a> <a href="#5.15" class="lyref">5.15</a> <a href="#6.8" class="lyref">6.8</a> <a href="#6.30" class="lyref">6.30</a> <a href="#7.15" class="lyref">7.15</a> <a href="#9.6" class="lyref">9.6</a> <a href="#9.13" class="lyref">9.13</a> <a href="#11.3" class="lyref">11.3</a> <a href="#11.13" class="lyref">11.13</a> <a href="#11.16" class="lyref">11.16</a> <a href="#11.19" class="lyref">11.19</a> <a href="#12.7" class="lyref">12.7</a> <a href="#12.8" class="lyref">12.8</a> <a href="#12.23" class="lyref">12.23</a> <a href="#13.20" class="lyref">13.20</a> <a href="#13.24" class="lyref">13.24</a> <a href="#14.17" class="lyref">14.17</a> <a href="#14.28" class="lyref">14.28</a> <a href="#14.29" class="lyref">14.29</a> <a href="#14.35" class="lyref">14.35</a> <a href="#15.3" class="lyref">15.3</a> <a href="#15.10" class="lyref">15.10</a> <a href="#15.24" class="lyref">15.24</a> <a href="#17.19" class="lyref">17.19</a> <a href="#17.24" class="lyref">17.24</a> <a href="#19.20" class="lyref">19.20</a> <a href="#19.21" class="lyref">19.21</a> <a href="#19.22" class="lyref">19.22</a> <a href="#19.23" class="lyref">19.23</a> <a href="#19.24" class="lyref">19.24</a> <a href="#19.25" class="lyref">19.25</a> </p>
 <p>
-<a id="zijian"></a><span class="lycharname">子贱</span>：宓（<span class="lypinyin">m&igrave;</span>，旧读<span class="lypinyin">f&uacute;</span>）不齐，字子贱，少孔子30岁，鲁国人，曾任<a id="shanfu"></a>鲁国单父（<span class="lypinyin">sh&agrave;n fǔ</span>，也作亶父，今山东省菏泽市单县）邑宰。据《吕氏春秋&middot;审应览&middot;具备》，上任之初，他通过隐喻巧妙地获得了鲁君的信任，使单父大治，流传下&ldquo;掣肘&rdquo;的典故。《说苑&middot;政理》载，孔子问他何以<span class="lyq">治单父而众说</span>，子贱说自己爱民：<span class="lyq">父其父，子其子，<a href="#xu4c">恤</a>诸孤而哀丧纪</span>，孔子认为是小节：<span class="lyq">小民附矣，犹未足也</span>；子贱说自己待人谦恭推诚，孔子认为是中节；子贱说访求到5位能于自己的贤人协理政务，孔子赞叹：<span class="lyq">欲其大者，乃于此在矣。昔者<a href="#yao">尧</a>、<a href="#shun">舜</a>清微其身，以听观天下，务来贤人。夫举贤者，百福之宗也，而神明之主也。不齐之所治者小也，不齐所治者大，其与尧、舜继矣。</span>《史记&middot;滑稽列传》末尾评论：<span class="lyq"><a href="#zichan">子产</a>治郑，民不能欺；子贱治单父，民不忍欺；西门豹治邺，民不敢欺。三子之才能谁最贤哉？辨治者当能别之。</span>（西门豹：战国初期魏国邺县（在今河北省邯郸市临漳县西南）县令，破除陋习，引水灌田，<span class="lyq">名闻天下，泽流后世</span>。）据《颜氏家训&middot;书证》，今文《<a href="#shangshu">尚书</a>》的传人秦博士伏生，就是子贱的后人。 <a href="#5.3" class="lyref">5.3</a> </p>
+<a id="zijian"></a><span class="lycharname">子贱</span>：宓（<span class="lypinyin">m&igrave;</span>，旧读<span class="lypinyin">f&uacute;</span>）不齐，字子贱，少孔子30岁，鲁国人，曾任<a id="shanfu"></a>鲁国单父（<span class="lypinyin">sh&agrave;n fǔ</span>，也作亶父，今山东省菏泽市单县）邑宰。据《吕氏春秋&middot;审应览&middot;具备》，上任之初，他通过隐喻巧妙地获得了鲁君的信任，使单父大治，流传下&ldquo;掣肘&rdquo;的典故。《说苑&middot;政理》载，孔子问他何以<span class="lyq">治单父而众说</span>，子贱说自己爱民：<span class="lyq">父其父，子其子，<a href="#xu4c">恤</a>诸孤而哀丧纪</span>，孔子认为是小节：<span class="lyq">小民附矣，犹未足也</span>；子贱说自己待人谦恭推诚，孔子认为是中节；子贱说访求到5位能于自己的贤人协理政务，孔子赞叹：<span class="lyq">欲其大者，乃于此在矣。昔者<a href="#yao">尧</a>、<a href="#shun">舜</a>清微其身，以听观天下，务来贤人。夫举贤者，百福之宗也，而神明之主也。不齐之所治者小也，不齐所治者大，其与尧、舜继矣。</span>《史记&middot;滑稽列传》末尾评论：<span class="lyq"><a href="#zichan">子产</a>治郑，民不能欺；子贱治单父，民不忍欺；西门豹治邺，民不敢欺。三子之才能谁最贤哉？辨治者当能别之。</span>（<a id="ximenbao"></a>西门豹：战国初期魏国邺县（在今河北省邯郸市临漳县西南）县令，破除陋习，引水灌田，<span class="lyq">名闻天下，泽流后世</span>。）据《颜氏家训&middot;书证》，今文《<a href="#shangshu">尚书</a>》的传人秦博士伏生，就是子贱的后人。 <a href="#5.3" class="lyref">5.3</a> </p>
 <p>
 <a id="zilu"></a><span class="lycharname">子路</span>，<span class="lycharname">季路</span>，<span class="lycharname">仲由</span>，<span class="lycharname">由</span>：仲由（前542年&mdash;前480年），字子路，又称季路，鲁国<a href="#bianyi">卞邑</a>人，<a href="#11.3">孔门十哲</a>之一，少孔子9岁。除了<a href="#yanlu">颜路</a>和<a href="#boniu">伯牛</a>以外，他是《论语》诸弟子中最年长的。子路忠勇直率，长期追随孔子左右，虽常因为思维简单挨孔子的批评，但也只有这个大龄<a href="#13.3">野小子</a>最能让老师放松随意吧！子路少时家贫，成年后热心功名，曾任<a href="#jihuanzi">季桓子</a>的家宰，后来又任卫大夫<a href="#kongkui">孔悝</a>的<a id="puyi"></a>蒲邑（在今河南省长垣县）邑宰。《孔子家语&middot;辩政》说，子路治蒲三年，孔子路过观察民风，三称其善。<a id="weiqinfumi"></a>身处富贵之时，他想起故去的父母，<span class="lyq">乃叹曰：&ldquo;虽欲食藜藿之食，为亲负米，不可得也！&rdquo;</span>（藜藿（<span class="lypinyin">l&iacute; hu&ograve;</span>）：粗劣的饭菜。见《二十四孝》第5个故事&ldquo;为亲负米&rdquo;。）前480年（《左传&middot;哀公十五年》），63岁的子路奋勇<a href="#kuaikuizhiluan">营救</a>被<a href="#weijun">蒯聩</a>挟持的主公孔悝，孤身不敌，帽缨（系在下巴上固定帽子的束带）也被击断了。在生命最后一刻，<span class="lyq">子路曰：&ldquo;君子死，冠不免。&rdquo;结缨而死。</span>死且不忘礼，不愧为孔子的学生。</p>
 <p>《礼记&middot;檀弓上》载，孔子正在院子中间恸哭子路，听说其尸体被施以醢（<span class="lypinyin">hǎi</span>，剁成肉酱）刑的惨状，立刻让把家里的肉酱倒掉。4年之间，<a href="#li">孔鲤</a>、<a href="#yanhui">颜回</a>、子路接连亡故，对孔子的打击可想而知，一年后他也去世了。 <a href="#2.17" class="lyref">2.17</a> <a href="#5.7" class="lyref">5.7</a> <a href="#5.8" class="lyref">5.8</a> <a href="#5.14" class="lyref">5.14</a> <a href="#5.26" class="lyref">5.26</a> <a href="#6.8" class="lyref">6.8</a> <a href="#6.28" class="lyref">6.28</a> <a href="#7.11" class="lyref">7.11</a> <a href="#7.19" class="lyref">7.19</a> <a href="#7.35" class="lyref">7.35</a> <a href="#9.12" class="lyref">9.12</a> <a href="#9.27" class="lyref">9.27</a> <a href="#10.27" class="lyref">10.27</a> <a href="#11.3" class="lyref">11.3</a> <a href="#11.12" class="lyref">11.12</a> <a href="#11.13" class="lyref">11.13</a> <a href="#11.15" class="lyref">11.15</a> <a href="#11.18" class="lyref">11.18</a> <a href="#11.22" class="lyref">11.22</a> <a href="#11.24" class="lyref">11.24</a> <a href="#11.25" class="lyref">11.25</a> <a href="#11.26" class="lyref">11.26</a> <a href="#12.12" class="lyref">12.12</a> <a href="#13.1" class="lyref">13.1</a> <a href="#13.3" class="lyref">13.3</a> <a href="#13.28" class="lyref">13.28</a> <a href="#14.12" class="lyref">14.12</a> <a href="#14.16" class="lyref">14.16</a> <a href="#14.22" class="lyref">14.22</a> <a href="#14.36" class="lyref">14.36</a> <a href="#14.38" class="lyref">14.38</a> <a href="#14.42" class="lyref">14.42</a> <a href="#15.2" class="lyref">15.2</a> <a href="#15.4" class="lyref">15.4</a> <a href="#16.1" class="lyref">16.1</a> <a href="#17.5" class="lyref">17.5</a> <a href="#17.7" class="lyref">17.7</a> <a href="#17.8" class="lyref">17.8</a> <a href="#17.23" class="lyref">17.23</a> <a href="#18.6" class="lyref">18.6</a> <a href="#18.7" class="lyref">18.7</a> </p>
@@ -14479,7 +14489,7 @@ img.characterimg {
 <p>
 <a id="yanpingzhong"></a><span class="lycharname">晏平仲</span>：晏婴（前578年&mdash;前500年），平是他的谥号（&ldquo;布纲治纪曰平&rdquo;），仲是他的字。春秋后期齐国灵公、庄公、<a href="#qijinggong">景公</a>的三朝重臣，娴于外交，智慧通达，节俭力行。《史记&middot;管晏列传》简要记述了他的事迹，《晏子春秋》集中载录了他的言行活动。 <a href="#5.17" class="lyref">5.17</a> </p>
 <p>
-<a id="yao"></a><span class="lycharname">尧</span>（约前2300年前后）：陶唐氏，名放勋，又称唐尧，上古传说中<a href="#wudi">五帝</a>的第4位，是五帝第3位喾的次子。尧20岁登帝位，仁智明德，亲亲利民，《史记&middot;五帝本纪》形容他<span class="lyq">其仁如天，其知如神，就之如日，望之如云。</span>在位70年后退居二线，授权给有孝德的平民<a href="#shun">舜</a>，20年后荐舜摄天子政，又8年后去世，<span class="lyq">百姓悲哀，如丧父母。</span>后来&ldquo;尧舜<a href="#yu">禹</a><a href="#tang">汤</a>&rdquo;、&ldquo;二帝三王&rdquo;（尧、舜；禹、汤、<a href="#wu">周武王</a>）被儒家奉为圣明君主的代名词。 <a href="#6.30" class="lyref">6.30</a> <a href="#8.19" class="lyref">8.19</a> <a href="#14.42" class="lyref">14.42</a> <a href="#20.1" class="lyref">20.1</a> </p>
+<a id="yao"></a><span class="lycharname">尧</span>（约前2300年前后）：陶唐氏，名放勋，又称唐尧，上古传说中<a href="#wudi">五帝</a>的第4位，是五帝第3位喾的次子。尧20岁登帝位，仁智明德，亲亲利民，《史记&middot;五帝本纪》形容他<span class="lyq">其仁如天，其知如神，就之如日，望之如云。</span>他在位70年后退居二线，授权给有孝德的平民<a href="#shun">舜</a>，20年后荐舜摄天子政，又8年后去世，<span class="lyq">百姓悲哀，如丧父母。</span>后来&ldquo;尧舜<a href="#yu">禹</a><a href="#tang">汤</a>&rdquo;、&ldquo;二帝三王&rdquo;（尧、舜；禹、汤、<a href="#wu">周武王</a>）被儒家奉为圣明君主的代名词。 <a href="#6.30" class="lyref">6.30</a> <a href="#8.19" class="lyref">8.19</a> <a href="#14.42" class="lyref">14.42</a> <a href="#20.1" class="lyref">20.1</a> </p>
 <p>
 <a id="yegong"></a><span class="lycharname">叶（旧读<span class="lypinyin">sh&egrave;</span>）公</span>：沈诸梁，字子高，楚国大臣，曾被楚昭王任命为叶县（在今河南省叶县南）长官，故称叶公，是叶姓始祖。在叶任内，他积极兴修水利，深受民众爱戴。前479年（同年孔子去世），楚惠王之孙谋反，叶公领兵平定了叛乱，这时他身兼令尹（最高政务长官）、司马（最高军事长官）二职，局势平静后却立即退休，终老于叶，享年89岁。传说为求龙王保佑风调雨顺，叶公让在每个出水口画上龙像，成为&ldquo;水龙头&rdquo;的由来。&ldquo;叶公好龙&rdquo;是西汉刘向《新序》假托叶公之名虚构的寓言。 <a href="#7.19" class="lyref">7.19</a> <a href="#13.16" class="lyref">13.16</a> <a href="#13.18" class="lyref">13.18</a> </p>
 <p>
@@ -14742,10 +14752,10 @@ img.characterimg {
 <p> 各章之间的联系比较散乱，需要仔细梳理。主题索引也应该更有条理。补充参考材料中没来及写的点评。</p>
 </li>
 <li>
-<p> 持续改进&ldquo;评&rdquo;的部分。</p>
+<p> 正文之前会增加一篇导言，介绍孔子的生平和影响，不少章的历史背景就有了着落。我对它的期望很高，希望不会篇幅太长。</p>
 </li>
 <li>
-<p> 正文之前会增加一篇导言，介绍孔子的生平和影响，不少章的历史背景就有了着落。我对它的期望很高，希望不会篇幅太长。</p>
+<p> 持续改进&ldquo;评&rdquo;的部分。</p>
 </li>
 <li>
 <p> 配上适当的插图，代码中已经标出了若干处。我很羡慕画画好的人，封面的设计很大程度上是藏拙的办法。这个只能慢慢来。</p>
