--- a/aboly.html
+++ b/aboly.html
@@ -1760,7 +1760,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">举直错诸枉</span>：把正直君子安排在比邪曲小人高的职位上。<a id="ju3"></a><span class="lyterm">举</span>：选用，推荐。<a id="cuo4"></a><span class="lyterm">错</span>：通&ldquo;措&rdquo;，放置，安放。<span class="lyterm">枉</span>：弯曲，不直。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第4卷第4章强调了小人在位的危害：<span class="lyq">《周书》曰：&ldquo;无为虎傅翼，将飞入<a href="#yi4c">邑</a>，择人而食。&rdquo;夫置不肖之人于位，是为虎傅翼也，不亦<a href="#dai4">殆</a>乎？</span>（傅：附，添加。）</span></span>
+<span class="lyterm">举直错诸枉</span>：把正直君子安排在比邪曲小人高的职位上。<a id="ju3"></a><span class="lyterm">举</span>：选用，推荐。<a id="cuo4"></a><span class="lyterm">错</span>：通&ldquo;措&rdquo;，放置，安放。<span class="lyterm">枉</span>：弯曲，不直。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第4卷第4章强调了小人在位的危害：<span class="lyq">《周书》曰：&ldquo;无为虎傅翼，将飞入<a href="#yi4c">邑</a>，择人而食。&rdquo;夫置不肖之人于位，是为虎傅翼也，不亦<a href="#dai4">殆</a>乎？</span>（<a id="fu4a"></a>傅：附，加。）</span></span>
 </p>
 </li>
 </ul>
@@ -3991,7 +3991,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">是用</span>：&ldquo;用是&rdquo;的倒装，由于这，因此，和现代书面语&ldquo;是以&rdquo;的结构和含义都相同，多见于先秦作品。<span class="lyexample"><span>【例】</span><span>《史记&middot;越王勾践世家》：<span class="lyq">王前欲伐齐，员强谏，已而有功，用是反怨王。</span></span></span><a id="yong4"></a><span class="lyterm">用</span>：介词，表示原因、凭借，相当于以。<span class="lyexample"><span>【例】</span><span>《史记&middot;佞幸列传》：<span class="lyq">卫青、霍去病亦以外戚贵幸，然颇用材能自进。</span>《三国志&middot;魏书&middot;王昶（<span class="lypinyin">chǎng</span>）传》：<span class="lyq">古者<a href="#panming">盘</a>杅有铭，<a href="#zhengzuo">几</a>杖有诫，俯仰察焉，用无过行。</span>（<a id="yu2c"></a>杅（<span class="lypinyin">y&uacute;</span>）：通&ldquo;盂&rdquo;，盛饮食的器皿。）</span></span>
+<a id="shiyong"></a><span class="lyterm">是用</span>：&ldquo;用是&rdquo;的倒装，由于这，因此，和现代书面语&ldquo;是以&rdquo;的结构和含义都相同，多见于先秦作品。<span class="lyexample"><span>【例】</span><span>《史记&middot;越王勾践世家》：<span class="lyq">王前欲伐齐，员强谏，已而有功，用是反怨王。</span></span></span><a id="yong4"></a><span class="lyterm">用</span>：介词，表示原因、凭借，相当于以。<span class="lyexample"><span>【例】</span><span>《史记&middot;佞幸列传》：<span class="lyq">卫青、霍去病亦以外戚贵幸，然颇用材能自进。</span>《三国志&middot;魏书&middot;王昶（<span class="lypinyin">chǎng</span>）传》：<span class="lyq">古者<a href="#panming">盘</a>杅有铭，<a href="#zhengzuo">几</a>杖有诫，俯仰察焉，用无过行。</span>（<a id="yu2c"></a>杅（<span class="lypinyin">y&uacute;</span>）：通&ldquo;盂&rdquo;，盛饮食的器皿。）</span></span>
 </p>
 </li>
 <li>
@@ -4103,8 +4103,10 @@ img.characterimg {
 <a id="huairouyuanren"></a>
 <div class="lyseealso">
 <p>
-<span>【参】</span><span>中国古代素有&ldquo;怀柔<a href="#yidihuaxia">远人</a>&rdquo;的政治理念，怀即来，柔即安，均为使动用法。怀的这个含义，可理解为源自想念，即给予恩惠，使其感念向往；也可理解为源自胸怀，即宽厚仁爱，使之归于怀抱。这后一种解释，在乔治&middot;奥威尔（George Orwell）的小说《动物庄园》（<em>Animal Farm</em>）第一章，谷仓集会里，有个生动的场景可以作为写照：</span>
+<span>【参】</span><span>中国古代素有&ldquo;怀柔<a href="#yidihuaxia">远人</a>&rdquo;的政治理念，怀即来，柔即安，均为使动用法。怀的这个含义，可理解为源自想念，即给予恩惠，使其感念向往；也可理解为源自胸怀，即宽厚仁爱，使之归于怀抱。</span>
 </p>
+<p>这前一种解释，例证如<a href="#zichan">子产</a>去世时民众发自内心的悲痛，反例如《史记&middot;酷吏列传》所载，汉武帝的<a href="#tingwei">廷尉</a>张汤自幼娴于刀笔，<span class="lyq">为人多诈，舞智以御人，&hellip;&hellip;文深意忌不专平，&hellip;&hellip;舞文巧诋以辅法，&hellip;&hellip;百姓不安其生</span>，所以<span class="lyq">张汤死而民不思</span>（《史记&middot;平准书》）。</p>
+<p>后一种解释，在乔治&middot;奥威尔（George Orwell）的小说《动物庄园》（<em>Animal Farm</em>）第一章，谷仓集会里，有个生动的场景可以作为写照：</p>
 <div class="lyquotepara">
 <p>The two horses had just lain down when a brood of ducklings, which had lost their mother, filed into the barn, cheeping feebly and wandering from side to side to find some place where they would not be trodden on. Clover made a sort of wall round them with her great foreleg, and the ducklings nestled down inside it, and promptly fell asleep.</p>
 <p>两匹马刚卧下，就有一窝小鸭个跟个地走进谷仓，他们跟丢了亲娘，懦懦地边叫边来回游荡，想找个不会被踩到的所在。Clover〔其中一马〕拿自己壮实的前腿当墙将他们围拢，小鸭就在里面舒舒服服地依偎着睡倒，立时进入了梦乡。</p>
@@ -4126,7 +4128,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">讼</span>：责备。成语&ldquo;计过自讼&rdquo;指反思自己的过失并在内心自责。<span class="lyseealso"><span>【参】</span><span>《史记&middot;循吏列传》：<span class="lyq">李离者，<a href="#jinwengong">晋文公</a>之理也。过听杀人，自拘当死。文公曰：&ldquo;官有贵贱，罚有轻重。下吏有过，非子之罪也。&rdquo;李离曰：&ldquo;臣居官为长，不与吏让位；受禄为多，不与下分利；今过听杀人，傅其罪下吏，非所闻也。&rdquo;&hellip;&hellip;遂不受令，伏剑而死。</span>（循吏：奉职循理的官吏。理：治狱官，法官。傅：强加。）反例：临时工。</span></span>
+<span class="lyterm">讼</span>：责备。成语&ldquo;计过自讼&rdquo;指反思自己的过失并在内心自责。<span class="lyseealso"><span>【参】</span><span>《史记&middot;循吏列传》：<span class="lyq">李离者，<a href="#jinwengong">晋文公</a>之理也。过听杀人，自拘当死。文公曰：&ldquo;官有贵贱，罚有轻重。下吏有过，非子之罪也。&rdquo;李离曰：&ldquo;臣居官为长，不与吏让位；受禄为多，不与下分利；今过听杀人，<a href="#fu4a">傅</a>其罪下吏，非所闻也。&rdquo;&hellip;&hellip;遂不受令，伏剑而死。</span>（循吏：奉职循理的官吏。理：治狱官，法官。）反例：临时工。</span></span>
 </p>
 </li>
 </ul>
@@ -6201,11 +6203,12 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">乱也</span>：指这是乱的苗头，要出乱子了。</p>
+<span class="lyterm">乱也</span>：指这是乱的苗头，要出乱子了。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">二者之心善恶虽殊，然其生乱则一也。</span></span></span>
+</p>
 </li>
 <li>
 <p>
-<span class="lyterm">已甚</span>：太过分。<span class="lyexample"><span>【例】</span><span>成语&ldquo;不为已甚&rdquo;指做事不应太过分，要适可而止。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#11.16" class="lyref">11.16</a> <a href="#15.27" class="lyref">15.27</a> 。《四书集注》：<span class="lyq">二者之心善恶虽殊，然其生乱则一也。</span></span></span>
+<span class="lyterm">已甚</span>：太过分。<span class="lyexample"><span>【例】</span><span>成语&ldquo;不为已甚&rdquo;指做事不应太过分，要适可而止。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#11.16" class="lyref">11.16</a> 。苏轼《刑赏忠厚之至论》：<span class="lyq">《<a href="#shangshu">书</a>》曰：&ldquo;罪疑惟轻，功疑惟重。与其杀不辜，宁失不经。&rdquo;呜呼，尽之矣！可以赏，可以无赏，赏之过乎<a href="#ren2">仁</a>；可以罚，可以无罚，罚之过乎<a href="#yi4">义</a>。过乎仁，不失为君子；过乎义，则流而入于<a href="#ren3">忍</a>人。故仁可过也，义不可过也。</span>（引文出自《尚书&middot;虞夏书&middot;大禹谟》（伪），是<a href="#gaoyao">皋陶</a>回答<a href="#shun">舜帝</a>的话，其中还有：<span class="lyq"><a href="#6.2">临下以简</a>，<a href="#3.26">御众以宽</a>。&hellip;&hellip;好生之德洽于民心，<a href="#shiyong">兹用</a>不犯于<a href="#yousi">有司</a></span>。不经：不合常法。流：变。）</span></span>
 </p>
 </li>
 </ul>
@@ -9513,7 +9516,7 @@ img.characterimg {
 <p>
 <span class="lyterm">无所<a href="#cuo4">错</a>手足</span>：指不知要怎么做才妥当。后来有成语&ldquo;手足无措&rdquo;，形容人慌乱无定的样子，多用于心情紧张或应付不来事情的场景。</p>
 <p>
-<span class="lyseealso"><span>【参】</span><span>在位君子既然享有<a href="#dezhi">民之父母</a>的优越地位，被统治者就容易感到授人以柄，缺乏反向约束力。所以史籍上才会时常强调法之尊严，力求令行禁止。如《史记&middot;张释之冯唐列传》载，有行人误惊了汉文帝的御马，廷尉张释之依法判处罚金四两，被文帝怒责，<span class="lyq">释之曰：&ldquo;法者，<a href="#tianzi">天子</a>所与天下公共也。今法如此而更重之，是法不信于民也。且方其时，上使立诛之则已；今既下廷尉，廷尉，天下之平也，一倾而天下用法皆为轻重，民安所错手足？唯陛下察之。&rdquo;良久，上曰：&ldquo;廷尉当是也。&rdquo;</span>（廷尉：秦汉两代的最高司法官，九卿之一。&ldquo;立诛之则已&rdquo;仍是天子的特权。）</span></span>
+<span class="lyseealso"><span>【参】</span><span>在位君子既然享有<a href="#dezhi">民之父母</a>的优越地位，被统治者就容易感到授人以柄，缺乏反向约束力。所以史籍上才会时常强调法之尊严，力求令行禁止。如《史记&middot;张释之冯唐列传》载，有行人误惊了汉文帝的御马，廷尉张释之依法判处罚金四两，被文帝怒责，<span class="lyq">释之曰：&ldquo;法者，<a href="#tianzi">天子</a>所与天下公共也。今法如此而更重之，是法不信于民也。且方其时，上使立诛之则已；今既下廷尉，廷尉，天下之平也，一倾而天下用法皆为轻重，民安所错手足？唯陛下察之。&rdquo;良久，上曰：&ldquo;廷尉当是也。&rdquo;</span>（<a id="tingwei"></a>廷尉：秦汉两代的最高司法官，九卿之一。&ldquo;立诛之则已&rdquo;仍是天子的特权。）</span></span>
 </p>
 </li>
 <li>
