--- a/aboly.html
+++ b/aboly.html
@@ -2028,7 +2028,7 @@ img.characterimg {
 <p>
 <span class="lyterm">维</span>：为，是。</p>
 <p>
-<span class="lyterm">辟公</span>：指诸侯。<span class="lyterm">辟</span>：君。<span class="lyexample"><span>【例】</span><span>《诗经&middot;大雅&middot;荡》的开头：<span class="lyq">荡荡上帝，下民之辟。</span>（<a href="#dangdang">荡荡</a>：一语双关，实指骄纵妄为。<a href="#shangdi">上帝</a>：影射<a href="#lixuanyouping">周厉王</a>。）</span></span>
+<span class="lyterm">辟公</span>：指诸侯。<span class="lyterm">辟</span>：君。<span class="lyexample"><span>【例】</span><span>《诗经&middot;大雅&middot;荡》开头是：<span class="lyq">荡荡上帝，下民之辟。</span>（<a href="#dangdang">荡荡</a>：一语双关，实指骄纵妄为。<a href="#shangdi">上帝</a>：影射<a href="#lixuanyouping">周厉王</a>。）</span></span>
 </p>
 </li>
 <li>
@@ -2830,7 +2830,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">能</span>：指态度适当。这可以从<a href="#ren2">仁</a>者爱人、相敬相惜的角度理解。<span class="lyseealso"><span>【参】</span><span><a href="#16.11" class="lyref">16.11</a> <span class="lyq">见善如不及，见不善如探汤。</span></span></span>
+<span class="lyterm">能</span>：指态度适当。这可以从<a href="#ren2">仁</a>者爱人、相敬相惜的角度理解。<span class="lyseealso"><span>【参】</span><span><a href="#8.10" class="lyref">8.10</a> <span class="lyq">人而不仁，疾之已甚，乱也。</span></span></span>
 </p>
 </li>
 <li>
@@ -6123,7 +6123,7 @@ img.characterimg {
 </li>
 </ul>
 <p>
-<span class="lyseealso"><span>【参】</span><span>孔子在 <a href="#17.9" class="lyref">17.9</a> <a href="#16.13" class="lyref">16.13</a>  讲述了《<a href="#shijing">诗经</a>》的意义。<a href="#16.13" class="lyref">16.13</a> <a href="#20.3" class="lyref">20.3</a>  都强调<span class="lyq">不学（知）礼，无以立。</span>礼乐的意义，还可参考 <a href="#3.3" class="lyref">3.3</a>  及其<a href="#liyue">引文</a>。</span></span>
+<span class="lyseealso"><span>【参】</span><span>孔子在 <a href="#17.9" class="lyref">17.9</a> <a href="#16.13" class="lyref">16.13</a>  讲述了《<a href="#shijing">诗经</a>》的效用。<a href="#16.13" class="lyref">16.13</a> <a href="#20.3" class="lyref">20.3</a>  都强调<span class="lyq">不学（知）礼，无以立。</span>礼乐的意义，还可参考 <a href="#3.3" class="lyref">3.3</a>  及其<a href="#liyue">引文</a>。</span></span>
 </p>
 </div>
 </div>
