--- a/aboly.html
+++ b/aboly.html
@@ -1153,7 +1153,8 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">谄</span>（<span class="lypinyin">chǎn</span>）：奉承，巴结。</p>
+<span class="lyterm">谄</span>（<span class="lypinyin">chǎn</span>）：奉承，巴结。<span class="lyexample"><span>【例】</span><span>成语&ldquo;谄上欺下&rdquo;。</span></span>
+</p>
 </li>
 <li>
 <p>
@@ -1243,7 +1244,7 @@ img.characterimg {
 <a id="dezhi"></a>
 <div class="lyseealso">
 <p>
-<span>【参】</span><span>儒家推崇的<span class="lykeyword">德治</span>，是将家族观念推广了的人治，在上修身勤政，对下仁爱教化，很依赖上位者的道德才干，于是有了&ldquo;父母官&rdquo;、&ldquo;爱民如子&rdquo;的说法。《大学》：<span class="lyq">《诗》云：&ldquo;乐<a href="#zhi1a">只</a>君子，民之父母。&rdquo;民之所好好之，民之所恶恶之，此之谓民之父母。</span>（所引诗句出自《诗经&middot;小雅&middot;南山有台》。）《论语》中多次强调，执政者必须以身作则，如 <a href="#13.6" class="lyref">13.6</a>  等。《孝经&middot;圣治》也说，<a href="#daren">君子</a><span class="lyq">言思可道，行思可乐，德义可尊，做事可<a href="#fa3">法</a>，容止可观，进退可度，以<a href="#lin2">临</a>其民。是以其民畏而爱之，<a href="#ze2">则</a>而象之，故能成其德教，而行其政令。</span>只有施行德政，才能得到上天眷顾，具体政策则可以灵活掌握。《尚书&middot;周书&middot;蔡仲之命》（伪）：<span class="lyq"><a href="#shangdi">皇天</a>无亲，惟德<a href="#shi4">是</a>辅；民心无常，惟<a href="#hui4">惠</a>之怀。为善不同，同归于治；为恶不同，同归于乱。</span></span>
+<span>【参】</span><span>儒家推崇的<span class="lykeyword">德治</span>，是将家族观念推广了的贤人政治，在上修身勤政，对下仁爱教化，很依赖上位者的道德才干，于是有了&ldquo;父母官&rdquo;、&ldquo;爱民如子&rdquo;的说法。《大学》：<span class="lyq">《诗》云：&ldquo;乐<a href="#zhi1a">只</a>君子，民之父母。&rdquo;民之所好好之，民之所恶恶之，此之谓民之父母。</span>（所引诗句出自《诗经&middot;小雅&middot;南山有台》。）《论语》中多次强调，执政者必须以身作则，如 <a href="#13.6" class="lyref">13.6</a>  等。《孝经&middot;圣治》也说，<a href="#daren">君子</a><span class="lyq">言思可道，行思可乐，德义可尊，做事可<a href="#fa3">法</a>，容止可观，进退可度，以<a href="#lin2">临</a>其民。是以其民畏而爱之，<a href="#ze2">则</a>而象之，故能成其德教，而行其政令。</span>只有施行德政，才能得到上天眷顾，具体政策则可以灵活掌握。《尚书&middot;周书&middot;蔡仲之命》（伪）：<span class="lyq"><a href="#shangdi">皇天</a>无亲，惟德<a href="#shi4">是</a>辅；民心无常，惟<a href="#hui4">惠</a>之怀。为善不同，同归于治；为恶不同，同归于乱。</span></span>
 </p>
 <p>
 <a id="fazhi"></a>法家主张的<span class="lykeyword">法治</span>，以密法严刑为基础，不强求执政者德才无瑕，却足以建立坚实的底线。《管子&middot;任法》：<span class="lyq">所谓仁义<a href="#liyue">礼乐</a>者，皆出于法，此先圣之所以一民也。&hellip;&hellip;君臣上下贵贱皆发<a href="#yan1a">焉</a>，故曰&ldquo;法&rdquo;。&hellip;&hellip;君臣上下贵贱皆从法，此谓为大治。</span>（<a id="yimin"></a>一民：统治百姓。发：产生。）《商君书&middot;开塞》：<span class="lyq">古之民朴<a href="#yi3a">以</a>厚，今之民巧以伪。故效于古者，先德而治；效于今者，前刑而法。</span>《韩非子&middot;难势》：<span class="lyq">且夫<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#xiachao">桀</a>、<a href="#zhou">纣</a>，千世而一出，&hellip;&hellip;吾所以为言势者，中也。&hellip;&hellip;抱法处势则治，背法去势则乱。今废势背法而待尧舜，尧舜至乃治，是千世乱而一治也；抱法处势而待桀纣，桀纣至乃乱，是千世治而一乱也。</span>
@@ -2174,7 +2175,7 @@ img.characterimg {
 <p>
 <span class="lyterm">必也射乎</span>：真要说有争的话，那就是在比赛射箭的时候吧。</p>
 <p>
-<a id="bi4"></a><span class="lyterm">必</span>：如果确实，果真，假如，表示让步或假设。<span class="lyexample"><span>【例】</span><span>《史记&middot;廉颇蔺相如列传》：<span class="lyq">大王必欲急臣，臣头今与璧俱碎于柱矣！</span><a href="#12.7" class="lyref">12.7</a> <span class="lyq">必不得已而去，于斯三者何先？</span></span></span>
+<a id="bi4"></a><span class="lyterm">必</span>：如果确实，果真，假如，表示让步或假设。<span class="lyexample"><span>【例】</span><span>《史记&middot;廉颇蔺相如列传》：<span class="lyq">大王必欲急臣，臣头今与璧俱碎于柱矣！</span>（<a id="bi4d"></a>璧（<span class="lypinyin">b&igrave;</span>）：<img alt="&#29863;" src="/img/bi.png" class="characterimg"> 形玉器，古代用作贵重礼器或饰物。）<a href="#12.7" class="lyref">12.7</a> <span class="lyq">必不得已而去，于斯三者何先？</span></span></span>
 </p>
 <p>
 <a id="sheli"></a><span class="lyterm">射</span>：指大射礼。<span class="lykeyword">射礼</span>是演礼性质的射箭饮酒比赛，而非军队演武的射技，分为4种：大射（贵族选拔任用）、宾射（天子宴请诸侯）、燕射（贵族日常娱乐）、乡射（百姓学习锻炼）。《仪礼》有乡射礼、大射两篇，记载了射礼的规程。<span class="lyseealso"><span>【参】</span><span>《礼记&middot;射义》：<span class="lyq">是故古者天子以射选诸侯、卿、大夫、士。&hellip;&hellip;射者，仁之道也。射求正诸己，己正而后发；发而不中，则不怨胜己者，反求诸己而已矣。</span></span></span>
@@ -6228,7 +6229,12 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">使</span>：连词，假如，假使。<span class="lyexample"><span>【例】</span><span>《吴越春秋&middot;夫差内传》：<span class="lyq">使死者有知，吾羞前君地下，不忍睹忠臣伍子胥及公孙圣；使其无知，吾负于生。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#18.10" class="lyref">18.10</a> <a href="#zhuofatubu">所引</a>《史记》，是周公捉发吐哺谦恭下士的例子。《韩诗外传》第2卷第17章：<span class="lyq">君子有<a href="#zhu3">主</a>善之心，而无胜人之色；德足以君天下，而无骄肆之容；行足以及后世，而不以一言非人之不善。</span>《北史&middot;贾思伯传》载，贾思伯官至都官尚书（相当于后世的刑部尚书），又为北魏孝明帝的《春秋》师傅，可他<span class="lyq">性谦和，倾身礼士，虽在街途，停车下马，接<a href="#you4">诱</a><a href="#xunxun">恂恂</a>，<a href="#zeng1">曾</a>无倦色。客有谓曰：&ldquo;公今贵重，宁能不骄？&rdquo;思伯曰：&ldquo;衰至便骄，何常之有！&rdquo;当世以为雅言。</span>（宁（<span class="lypinyin">n&igrave;ng</span>）：何，怎。<a href="#yayan">雅言</a>：正理，确论。）</span></span>
+<span class="lyterm">美</span>：佳，指的是周公才能的出类拔萃。如果把&ldquo;之才之美&rdquo;理解成并列结构：的才能与美德，后面的&ldquo;使骄且吝&rdquo;就说不通了。<span class="lyseealso"><span>【参】</span><span>《史记&middot;鲁周公世家》载，<a href="#wu">武王</a>患病时，周公祭告先祖，情愿以身相代，理由就包括<span class="lyq">旦巧能，多材多艺，能事鬼神。乃王发不如旦多材多艺，不能事鬼神。</span>还说如果不答应，就不用<a href="#bi4d">璧</a>和<a href="#gui1">圭</a>献祭了。</span></span>
+</p>
+</li>
+<li>
+<p>
+<span class="lyterm">使</span>：连词，假如，假使。<span class="lyexample"><span>【例】</span><span>《吴越春秋&middot;夫差内传》：<span class="lyq">使死者有知，吾羞前君地下，不忍睹忠臣伍子胥及公孙圣；使其无知，吾负于生。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#18.10" class="lyref">18.10</a> <a href="#zhuofatubu">所引</a>《史记》，是周公捉发吐哺谦恭下士的例子。《韩诗外传》第2卷第17章：<span class="lyq">君子有<a href="#zhu3">主</a>善之心，而无胜人之色；德足以君天下，而无骄肆之容；行足以及后世，而不以一言非人之不善。</span>《北史&middot;贾思伯传》载，贾思伯官至都官尚书（相当于后来的刑部尚书），又是北魏孝明帝的《春秋》师傅，可他<span class="lyq">性谦和，倾身礼士，虽在街途，停车下马，接<a href="#you4">诱</a><a href="#xunxun">恂恂</a>，<a href="#zeng1">曾</a>无倦色。客有谓曰：&ldquo;公今贵重，宁能不骄？&rdquo;思伯曰：&ldquo;衰至便骄，何常之有！&rdquo;当世以为雅言。</span>（宁（<span class="lypinyin">n&igrave;ng</span>）：何，怎。<a href="#yayan">雅言</a>：正理，确论。）</span></span>
 </p>
 </li>
 </ul>
@@ -9897,8 +9903,8 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">行己有耻</span>：立身行事保持廉耻心。行己有耻是<a href="#13.21">有所不为</a>之志，使于四方是<a href="#13.5">学有所用</a>之才。</p>
-<p>这里&ldquo;有耻&rdquo;修饰&ldquo;<a href="#xingji">行己</a>&rdquo;。在现代语境中，还可以把&ldquo;行己有耻&rdquo;理解为并列结构，行己就是做（真的）自己，be your (best) self，也很有意义。</p>
+<span class="lyterm"><a href="#xingji">行己</a>有耻</span>：立身行事保持廉耻心。行己有耻是<a href="#13.21">有所不为</a>之志，使于四方是<a href="#13.5">学有所用</a>之才。</p>
+<p>这里&ldquo;有耻&rdquo;修饰&ldquo;行己&rdquo;。在现代语境中，还可以把&ldquo;行己有耻&rdquo;理解为并列结构，行己就是做（真的）自己，be your (best) self，也很有意义。</p>
 <div class="lyseealso">
 <p>
 <span>【参】</span><span>顾炎武《与友人论学书》中，高度推崇&ldquo;博学&rdquo;、&ldquo;有耻&rdquo;：<span class="lyq">愚所谓圣人之道者如之何？曰&ldquo;<a href="#6.27">博学于文</a>&rdquo;，曰&ldquo;行己有耻&rdquo;。自一身以至于天下国家，皆学之事也；自子臣弟友以至出入、往来、辞受、取与之间，皆有耻之事也。耻之于人大矣！不<a href="#4.9">耻恶衣恶食</a>，而<a href="#yitianxiaweijiren">耻匹夫匹妇之不被其泽</a>。</span></span>
