--- a/aboly.html
+++ b/aboly.html
@@ -2757,11 +2757,12 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">宽</span>：本义为房屋宽敞，引申为人度量大，宽厚。</p>
+<span class="lyterm">宽</span>：本义为房屋宽敞，引申指人度量大，宽厚。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">吾何以观之哉？</span>：这种人对我来说有什么值得一看的呢？意即乏善可陈。<span class="lyterm">观</span>：本义为注视，这里带有堪称一景、值得一瞧的意思，可以比较现代汉语的&ldquo;可观&rdquo;。</p>
+<span class="lyterm">吾何以观之哉？</span>：这种人对我来说有什么值得一看的呢？意即乏善可陈。<span class="lyterm">观</span>：本义为注视，这里带有堪称一景、值得一瞧的意思，可以比较现代汉语的&ldquo;可观&rdquo;。<span class="lyexample"><span>【例】</span><span><a href="#8.11" class="lyref">8.11</a> <span class="lyq">其余不足观也已。</span><a href="#19.4" class="lyref">19.4</a> <span class="lyq">虽小道，必有可观者焉。</span></span></span>
+</p>
 </li>
 </ul>
 </div>
@@ -6229,7 +6230,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">美</span>：佳，指的是周公才能的出类拔萃。如果把&ldquo;之才之美&rdquo;理解成并列结构：的才能与美德，后面的&ldquo;使骄且吝&rdquo;就说不通了。<span class="lyseealso"><span>【参】</span><span>《史记&middot;鲁周公世家》载，<a href="#wu">武王</a>患病时，周公祭告先祖，情愿以身相代，理由就包括<span class="lyq">旦巧能，多材多艺，能事鬼神。乃王发不如旦多材多艺，不能事鬼神。</span>还说如果不答应，就不用<a href="#bi4d">璧</a>和<a href="#gui1">圭</a>献祭了。</span></span>
+<span class="lyterm">美</span>：佳，指的是周公才能的出类拔萃。如果把&ldquo;之才之美&rdquo;理解成并列结构：的才能与美德，后面的&ldquo;使骄且吝&rdquo;就说不通了。如果理解成美貌，如 <a href="#6.16" class="lyref">6.16</a> <span class="lyq">宋朝之美</span>，则又缺乏史实依据。<span class="lyseealso"><span>【参】</span><span>《史记&middot;鲁周公世家》载，<a href="#wu">武王</a>患病时，周公祭告先祖，情愿以身相代，理由就包括<span class="lyq">旦巧能，多材多艺，能事鬼神。乃王发不如旦多材多艺，不能事鬼神。</span>还说如果不答应，就不用<a href="#bi4d">璧</a>和<a href="#gui1">圭</a>献祭了。</span></span>
 </p>
 </li>
 <li>
@@ -7496,7 +7497,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="gui1"></a><span class="lyterm">圭</span>（<span class="lypinyin">guī</span>）：帝王、诸侯举行隆重仪式所用的长条玉器，上尖下方。<span class="lyterm">执圭</span>指孔子奉命出使别国时，双手捧圭，作为本国国君的信物。</p>
+<a id="gui1"></a><span class="lyterm">圭</span>（<span class="lypinyin">guī</span>）：帝王、诸侯举行隆重仪式时所用的 <img alt="&#22317;" src="/img/gui.png" class="characterimg"> 形玉器，上尖下方。<span class="lyterm">执圭</span>指孔子奉命出使别国时，双手捧圭，作为本国国君的信物。</p>
 </li>
 <li>
 <p>
@@ -14445,7 +14446,7 @@ img.characterimg {
 <p>
 <a id="aigong"></a><span class="lycharname">哀公</span>：即鲁哀公（？&mdash;前468年），名蒋，鲁国第26任国君（&ldquo;遭难已甚曰哀&rdquo;），<a href="#dinggong">鲁定公</a>之子。前494年&mdash;前468年在位，期间鲁国实权一直被<a href="#sanhuan">三桓</a>把持，君臣离心。在位的最后一年，哀公想借助越国的力量除掉三桓，可能是计划泄露，遭到三桓联合攻击，辗转流亡于卫、邹、越，同年又被迎接（挟持？）回国，很快就去世了。事见《史记&middot;鲁周公世家》、《左传&middot;哀公二十七年》。《左传》的内容始于隐公元年（前722年），结于哀公二十七年（前468年）。 <a href="#2.19" class="lyref">2.19</a> <a href="#3.21" class="lyref">3.21</a> <a href="#6.3" class="lyref">6.3</a> <a href="#12.9" class="lyref">12.9</a> <a href="#14.21" class="lyref">14.21</a> </p>
 <p>
-<a id="boyishuqi"></a><span class="lycharname">伯夷、叔齐</span>：商朝末年孤竹国（在今河北省卢龙县）国君的长子、三子。叔齐先被立为太子，尊长欲让与伯夷；伯夷不愿违背父意，就与叔齐一同出走，投奔<a href="#wen">周文王</a>。当时文王已死，<a href="#wu">武王</a>领兵伐纣，他们认为是犯上违仁之举，叩马而谏；周灭商后，他们耻食周粟，隐居于首阳山（在今甘肃省定西市渭源县），采食野菜度日，终于饿死。<a id="caiweige"></a>《史记&middot;伯夷列传》记录（拟托？）了他们临终前的悲歌：<span class="lyq">登彼西山兮，采其薇矣。以暴<a href="#yi4e">易</a>暴兮，不知其非矣。<a href="#sanhuang">神农</a>、<a href="#tangyu">虞</a>、<a href="#xiachao">夏</a>忽焉没兮，我安适归矣？于嗟徂兮，命之衰矣！</span>（于嗟：叹词。徂（<span class="lypinyin">c&uacute;</span>）：去，往，指死。） <a href="#5.23" class="lyref">5.23</a> <a href="#7.15" class="lyref">7.15</a> <a href="#16.12" class="lyref">16.12</a> <a href="#18.8" class="lyref">18.8</a> </p>
+<a id="boyishuqi"></a><span class="lycharname">伯夷、叔齐</span>：商朝末年孤竹国（在今河北省卢龙县）国君的长子、三子。叔齐先被立为太子，尊长欲让与伯夷；伯夷不愿违背父意，就与叔齐一同出走，投奔<a href="#wen">周文王</a>。当时文王已死，<a href="#wu">武王</a>领兵伐纣，他们认为是犯上违仁之举，叩马而谏；周灭商后，他们耻食周粟，隐居于首阳山（在今甘肃省定西市渭源县），采食野菜度日，终于饿死。<a id="caiweige"></a>《史记&middot;伯夷列传》记载（拟托？）了他们临终前的悲歌：<span class="lyq">登彼西山兮，采其薇矣。以暴<a href="#yi4e">易</a>暴兮，不知其非矣。<a href="#sanhuang">神农</a>、<a href="#tangyu">虞</a>、<a href="#xiachao">夏</a>忽焉没兮，我安适归矣？于嗟徂兮，命之衰矣！</span>（于嗟：叹词。徂（<span class="lypinyin">c&uacute;</span>）：去，往，指死。） <a href="#5.23" class="lyref">5.23</a> <a href="#7.15" class="lyref">7.15</a> <a href="#16.12" class="lyref">16.12</a> <a href="#18.8" class="lyref">18.8</a> </p>
 <p>
 <a id="chenkang"></a><span class="lycharname">陈亢</span>，<span class="lycharname">陈子禽</span>，<span class="lycharname">子禽</span>：陈亢，字子禽，陈国人。一说是孔子的学生，从 <a href="#19.25" class="lyref">19.25</a>  来看不像。 <a href="#1.10" class="lyref">1.10</a> <a href="#16.13" class="lyref">16.13</a> <a href="#19.25" class="lyref">19.25</a> </p>
 <p>
